--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,3 +1,3 @@
 <div class="wrapper">
-<app-detailed-card></app-detailed-card>
+<app-detailed-card [data]="pokemon.pokemon"></app-detailed-card>
 </div>
