--- a/src/app/components/cards/display-card/display-card.component.css
+++ b/src/app/components/cards/display-card/display-card.component.css
@@ -12,6 +12,7 @@
   box-shadow: inset 20px 20px 60px #2b2b2b,
               inset -20px -20px 60px #3b3b3b;
   transition: 0.7s;
+  cursor: pointer;
 }
 
 .wrapper:hover
