--- a/src/app/components/cards/display-card/display-card.component.html
+++ b/src/app/components/cards/display-card/display-card.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper"*ngIf="pokemonGottem">
+<div class="wrapper"*ngIf="pokemonGottem" [routerLink]="['../','details', pokemon.name]">
   <div class="foto">
     <img class="box" [src]="getImageSource()" >
   </div>
