--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="header">
-  <div class="logo">
+  <div class="logo" routerLink="/list">
     <h1 class="red">Poke</h1><h1>Dex</h1>
   </div>
 
