--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,3 +1,10 @@
 <div class="wrapper">
-<app-detailed-card [data]="pokemon.pokemon"></app-detailed-card>
+  <div class="pokemon">
+    <app-detailed-card [data]="pokemon"></app-detailed-card>
+  </div>
+  <div class="comments">
+    <app-comments-box>
+    </app-comments-box>
+  </div>
 </div>
+
