--- a/src/app/components/miscelaneos/not-found/not-found.component.html
+++ b/src/app/components/miscelaneos/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>not-found works!</p>
+<div class="wrapper">
+  <h1>Oh No! Pokemon has escaped!</h1>
+  <img class="box" src="./assets/Images/NotFound.jpg" alt="">
+  <button class="btn dark box" routerLink= "/list">Return to the List</button>
+</div>
