missing comment box styling, otherwise done

--- a/src/app/components/comments-box/comments-box.component.html
+++ b/src/app/components/comments-box/comments-box.component.html
@@ -1,1 +1,9 @@
-<p>comments-box works!</p>
+<div class="wrapper">
+  <input type="text" placeholder="Name" [(ngModel)]="name">
+  <input type="text" placeholder="Message" [(ngModel)]="message">
+  <button (click)="addComment()">Add</button>
+  <div class="comment" *ngFor="let c of comments">
+    <p>{{c.name}}: {{c.message}}  {{c.date | date : " hh:mm:ss EEEE  YYYY/MM/dd"}}</p>
+    <button (click)="deleteComment(c.id)">Delete</button>
+  </div>
+</div>
